--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
       <div class="mt-8 mb-8">
         made by
         <a class="link" href="http://hihayk.com/" target="_blank">hayk</a>
+
+        <a class="link ml-4" href="https://github.com/hihayk/unit">github</a>
       </div>
     </div>
 
